Prevent cutoff on docs with autoscroll attribute on ui-view

--- a/docs/assets/scss/docs/_docs.scss
+++ b/docs/assets/scss/docs/_docs.scss
@@ -173,7 +173,7 @@ $rad: 5px;
 }
 
 .main-docs-section {
-  padding-top: 1rem;
+  margin-top: 1rem;
 }
 
 .docs-search-box {
